--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,9 +1,10 @@
 header {
   position: relative;
+  padding-top: 11.914%;
 
   img {
+    @include fill;
     display: block;
-    width: 100%;
   }
 
   a {
